--- a/dev/requirements.txt
+++ b/dev/requirements.txt
@@ -1,9 +1,7 @@
-geopandas==0.14.3
-numpy==1.26.4
+-r ../requirements.txt
+
 pip-audit==2.7.2
 pre-commit==3.7.0
-pyproj==3.6.1
 pytest==8.1.1
 pytest-cov==5.0.0
 ruff==0.3.7
-shapely==2.0.3
