--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -6,6 +6,11 @@ updates:
       interval: weekly
 
   - package-ecosystem: pip
+    directory: /
+    schedule:
+      interval: weekly
+
+  - package-ecosystem: pip
     directory: /dev
     schedule:
       interval: weekly
