--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,13 @@
+[tool.coverage.report]
+exclude_also = [
+    "def __repr__",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "class .*\\bProtocol\\):",
+    "@(abc\\.)?abstractmethod",
+]
+
 [tool.ruff]
 line-length = 120
 target-version = "py311"
