--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -24,16 +24,24 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.11
-        run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
 
-      - name: Build and deploy docs
+      - name: Set cache id
+        run: |
+          echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
+
+      - name: Cache dependencies
         uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
           path: .cache
           restore-keys: |
             mkdocs-material-
+
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools
           pip install mkdocs-material
+
+      - name: Build and deploy docs
+        run: |
           mkdocs gh-deploy -f dev/mkdocs.yaml --force
