--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+          cache: pip
 
       - name: Install requirements
         run: |
@@ -39,17 +39,17 @@ jobs:
           pytest --cov=./ --cov-report=xml
 
       - name: Upload coverage report to codecov
-        if: matrix.os == 'ubuntu-latest'
+        if: matrix.os == ubuntu-latest
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Lint with ruff
-        if: matrix.os == 'ubuntu-latest'
+        if: matrix.os == ubuntu-latest
         run: |
           ruff check src
 
       - name: Check dependencies with pip-audit
-        if: matrix.os == 'ubuntu-latest'
+        if: matrix.os == ubuntu-latest
         run: |
           pip-audit
