--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools
-          pip install mkdocs-material
+          pip install mkdocs-material mkdocstrings-python
 
       - name: Build and deploy docs
         run: |
