--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -1,14 +1,76 @@
 site_name: aviary
+site_url: https://mrsmrynk.github.io/aviary
+repo_name: geospaitial-lab/aviary
+repo_url: https://github.com/mrsmrynk/aviary
 docs_dir: ../docs
+
+nav:
+  - Get started: index.md
+  - API Reference:
+      - aviary.data:
+        - DataFetcher: api_reference/data/data_fetcher.md
+        - DataPreprocessor: api_reference/data/data_preprocessor.md
+        - Dataset: api_reference/data/dataset.md
+      - aviary.geodata:
+        - CoordinatesFilter: api_reference/geodata/coordinates_filter.md
+        - GridGenerator: api_reference/geodata/grid_generator.md
+      - aviary.utils:
+        - utils: api_reference/utils/types.md
+
 theme:
   name: material
   language: en
+  logo: assets/aviary_logo_black.svg
+  favicon: assets/aviary_logo_black.svg
+  icon:
+    repo: fontawesome/brands/github
+  font:
+    text: Noto Sans
+    code: Noto Sans Mono
   features:
     - navigation.instant
+    - navigation.expand
+    - navigation.tabs
+    - navigation.top
+  palette:
+    - media: '(prefers-color-scheme: light)'
+      scheme: default
+      primary: yellow
+      accent: amber
+      toggle:
+        icon: material/lightbulb
+        name: Switch to dark mode
+    - media: '(prefers-color-scheme: dark)'
+      scheme: slate
+      primary: yellow
+      accent: amber
+      toggle:
+        icon: material/lightbulb-outline
+        name: Switch to light mode
+
+plugins:
+  - search
+  - mkdocstrings:
+      handlers:
+        python:
+          options:
+            annotations_path: source
+            docstring_section_style: spacy
+            docstring_style: google
+            member_order: source
+            merge_init_into_class: true
+            show_root_full_path: false
+            show_root_heading: true
+            show_signature: false
+            show_source: false
+          paths:
+            - ../
+
 extra:
   generator: false
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/geospaitial-lab
+
 copyright:
   © 2024 geospaitial lab
