--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -14,6 +14,7 @@ nav:
       - aviary.geodata:
         - CoordinatesFilter: api_reference/geodata/coordinates_filter.md
         - GridGenerator: api_reference/geodata/grid_generator.md
+        - Vectorizer: api_reference/geodata/vectorizer.md
       - aviary.utils:
         - utils: api_reference/utils/types.md
 
