add docs [skip ci]

--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -13,6 +13,7 @@ nav:
         - Dataset: api_reference/data/dataset.md
       - aviary.geodata:
         - CoordinatesFilter: api_reference/geodata/coordinates_filter.md
+        - GeodataPostprocessor: api_reference/geodata/geodata_postprocessor.md
         - GridGenerator: api_reference/geodata/grid_generator.md
         - Vectorizer: api_reference/geodata/vectorizer.md
 
