--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ dask==2024.6.0
 geopandas==0.14.4
 huggingface_hub==0.23.4
 numpy==1.26.4
+onnxruntime-gpu==1.18.0
 pyarrow==16.1.0
 pyproj==3.6.1
 rasterio==1.3.10
