--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ huggingface_hub==0.23.4
 numpy==1.26.4
 onnxruntime==1.18.0
 pyarrow==16.1.0
+pydantic==2.7.4
 pyproj==3.6.1
 rasterio==1.3.10
 shapely==2.0.4
