add symbol types

--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -60,6 +60,8 @@ plugins:
             show_source: false
             show_root_heading: true
             show_root_full_path: false
+            show_symbol_type_heading: true
+            show_symbol_type_toc: true
             members_order: source
             docstring_style: google
             docstring_section_style: spacy
