--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -7,6 +7,11 @@ docs_dir: ../docs
 nav:
   - Get started: index.md
   - API Reference:
+      - aviary:
+        - BoundingBox: api_reference/bounding_box.md
+        - Enums: api_reference/enums.md
+        - ProcessArea: api_reference/process_area.md
+        - Types: api_reference/types.md
       - aviary.data:
         - DataFetcher: api_reference/data/data_fetcher.md
         - DataPreprocessor: api_reference/data/data_preprocessor.md
