--- a/dev/requirements.txt
+++ b/dev/requirements.txt
@@ -1,5 +1,4 @@
--r ../requirements.txt
-
+build==1.2.1
 mkdocs-material==9.5.27
 mkdocstrings-python==1.10.5
 pip-audit==2.7.3
@@ -7,3 +6,4 @@ pre-commit==3.7.1
 pytest==8.2.2
 pytest-cov==5.0.0
 ruff==0.4.10
+twine==5.1.1
