--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ onnxruntime==1.18.0
 pyarrow==16.1.0
 pydantic==2.7.4
 pyproj==3.6.1
+pyyaml==6.0.1
 rasterio==1.3.10
 shapely==2.0.4
 simplification==0.7.10
