--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ pyarrow==16.1.0
 pydantic==2.7.4
 pyyaml==6.0.1
 rasterio==1.3.10
+rich==13.7.1
 shapely==2.0.4
 simplification==0.7.10
 topojson==1.9
