--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,17 @@ maintainers = [
 ]
 license = {text = "GPL-3.0"}
 requires-python = ">=3.10"
+classifiers = [
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Scientific/Engineering :: GIS",
+]
 dynamic = [
     "dependencies",
     "optional-dependencies",
