--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,9 @@ exclude_also = [
     "@(abc\\.)?abstractmethod",
 ]
 
+[tool.pytest.ini_options]
+pythonpath = ["."]
+
 [tool.ruff]
 line-length = 120
 target-version = "py310"
