--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -23,3 +23,4 @@ jobs:
           include-title: true
           include-body: false
           sync-labels: true
+          enable-versioned-regex: false
