--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -4,6 +4,11 @@ docs_dir: ../docs
 
 nav:
   - Get started: index.md
+  - How-to Guides:
+    - How-to Guides: how_to_guides/index.md
+    - Installation:
+      - How to install aviary with venv: how_to_guides/installation/how_to_install_aviary_with_venv.md
+      - How to install aviary with Docker: how_to_guides/installation/how_to_install_aviary_with_docker.md
   - API Reference:
     - API Reference: api_reference/index.md
     - aviary:
