--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
           python -m pip install --upgrade pip setuptools
           pip install pytz
 
