--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -12,6 +12,10 @@ on:
         - patch
         required: true
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   bump_version:
     runs-on: ubuntu-latest
