--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -12,6 +12,10 @@ on:
         - patch
         required: true
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   bump_version:
     runs-on: ubuntu-latest
@@ -31,8 +35,8 @@ jobs:
 
       - name: Bump version
         run: |
-          python dev/scripts/bump_version.py --bump-type ${{ github.event.inputs.bump_type }}
-          echo "BUMPED_VERSION=$(python dev/scripts/get_version.py)" >> $GITHUB_ENV
+          python -m dev.scripts.bump_version --bump-type ${{ github.event.inputs.bump_type }}
+          echo "BUMPED_VERSION=$(python -m dev.scripts.get_version)" >> $GITHUB_ENV
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@v6
