--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -35,15 +35,16 @@ jobs:
 
       - name: Bump version
         run: |
+          echo "VERSION=$(python -m dev.scripts.get_version)" >> $GITHUB_ENV
           python -m dev.scripts.bump_version --bump-type ${{ github.event.inputs.bump_type }}
           echo "BUMPED_VERSION=$(python -m dev.scripts.get_version)" >> $GITHUB_ENV
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@v6
         with:
-          commit-message: bump version to ${{ env.BUMPED_VERSION }}
+          commit-message: bump version from ${{ env.VERSION }} to ${{ env.BUMPED_VERSION }}
           branch: build/bump-version
-          title: 'build: bump version to ${{ env.BUMPED_VERSION }}'
+          title: 'build: bump version from ${{ env.VERSION }} to ${{ env.BUMPED_VERSION }}'
           labels: |
             build
             ignore for release
