--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -9,6 +9,8 @@ nav:
     - Installation:
       - How to install aviary with venv: how_to_guides/installation/how_to_install_aviary_with_venv.md
       - How to install aviary with Docker: how_to_guides/installation/how_to_install_aviary_with_docker.md
+    - CLI:
+      - How to run the segmentation pipeline: how_to_guides/cli/how_to_run_the_segmentation_pipeline.md
   - API Reference:
     - API Reference: api_reference/index.md
     - aviary:
