--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -95,8 +95,10 @@ plugins:
             - ../
 
 markdown_extensions:
+  - admonition
   - attr_list
   - md_in_html
+  - pymdownx.details
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
