--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -7,7 +7,7 @@ nav:
   - How-to Guides:
     - How-to Guides: how_to_guides/index.md
     - Installation:
-      - How to install aviary with venv: how_to_guides/installation/how_to_install_aviary_with_venv.md
+      - How to install aviary with pip: how_to_guides/installation/how_to_install_aviary_with_pip.md
       - How to install aviary with Docker: how_to_guides/installation/how_to_install_aviary_with_docker.md
     - CLI:
       - How to run the segmentation pipeline: how_to_guides/cli/how_to_run_the_segmentation_pipeline.md
