--- a/.github/workflows/ghcr.yaml
+++ b/.github/workflows/ghcr.yaml
@@ -30,7 +30,7 @@ jobs:
           images: ghcr.io/${{ github.repository }}
           tags: |
             type=semver,pattern={{version}}
-            type=semver,pattern={{major}.{minor}}
+            type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=sha
 
