--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools
-          pip install pytz
+          pip install -r dev/requirements/bump_version_requirements.txt
 
       - name: Bump version
         run: |
