--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,7 +34,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools
           pip install -r requirements.txt
-          pip install -r dev/requirements.txt
+          pip install -r dev/requirements/ci_requirements.txt
 
       - name: Test with pytest
         run: |
