--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools
-          pip install -r dev/requirements.txt
+          pip install -r dev/requirements/pypi_requirements.txt
 
       - name: Build source distribution
         run: |
