--- a/dev/requirements.txt
+++ b/dev/requirements.txt
@@ -1,10 +1,4 @@
-build==1.2.1
-mkdocs-material==9.5.33
-mkdocstrings-python==1.10.8
-pip-audit==2.7.3
-pre-commit==3.8.0
-pytest==8.3.2
-pytest-cov==5.0.0
-pytz==2024.1
-ruff==0.6.1
-twine==5.1.1
+-r requirements/bump_version_requirements.txt
+-r requirements/ci_requirements.txt
+-r requirements/docs_requirements.txt
+-r requirements/pypi_requirements.txt
