--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -21,17 +21,44 @@ nav:
       - ProcessArea: api_reference/process_area.md
       - Types: api_reference/types.md
     - aviary.data:
-      - DataFetcher: api_reference/data/data_fetcher.md
+      - DataFetcher:
+        - DataFetcher: api_reference/data/data_fetcher/data_fetcher.md
+        - CompositeFetcher: api_reference/data/data_fetcher/composite_fetcher.md
+        - VRTFetcher: api_reference/data/data_fetcher/vrt_fetcher.md
+        - WMSFetcher: api_reference/data/data_fetcher/wms_fetcher.md
       - DataLoader: api_reference/data/data_loader.md
-      - DataPreprocessor: api_reference/data/data_preprocessor.md
+      - DataPreprocessor:
+        - DataPreprocessor: api_reference/data/data_preprocessor/data_preprocessor.md
+        - CompositePreprocessor: api_reference/data/data_preprocessor/composite_preprocessor.md
+        - NormalizePreprocessor: api_reference/data/data_preprocessor/normalize_preprocessor.md
+        - StandardizePreprocessor: api_reference/data/data_preprocessor/standardize_preprocessor.md
       - Dataset: api_reference/data/dataset.md
     - aviary.geodata:
-      - CoordinatesFilter: api_reference/geodata/coordinates_filter.md
-      - GeodataPostprocessor: api_reference/geodata/geodata_postprocessor.md
+      - CoordinatesFilter:
+        - CoordinatesFilter: api_reference/geodata/coordinates_filter/coordinates_filter.md
+        - CompositeFilter: api_reference/geodata/coordinates_filter/composite_filter.md
+        - DuplicatesFilter: api_reference/geodata/coordinates_filter/duplicates_filter.md
+        - GeospatialFilter: api_reference/geodata/coordinates_filter/geospatial_filter.md
+        - MaskFilter: api_reference/geodata/coordinates_filter/mask_filter.md
+        - SetFilter: api_reference/geodata/coordinates_filter/set_filter.md
+      - GeodataPostprocessor:
+        - GeodataPostprocessor: api_reference/geodata/geodata_postprocessor/geodata_postprocessor.md
+        - ClipPostprocessor: api_reference/geodata/geodata_postprocessor/clip_postprocessor.md
+        - CompositePostprocessor: api_reference/geodata/geodata_postprocessor/composite_postprocessor.md
+        - FieldNamePostprocessor: api_reference/geodata/geodata_postprocessor/field_name_postprocessor.md
+        - FillPostprocessor: api_reference/geodata/geodata_postprocessor/fill_postprocessor.md
+        - SievePostprocessor: api_reference/geodata/geodata_postprocessor/sieve_postprocessor.md
+        - SimplifyPostprocessor: api_reference/geodata/geodata_postprocessor/simplify_postprocessor.md
+        - ValuePostprocessor: api_reference/geodata/geodata_postprocessor/value_postprocessor.md
       - GridGenerator: api_reference/geodata/grid_generator.md
     - aviary.inference:
-      - Exporter: api_reference/inference/exporter.md
-      - Model: api_reference/inference/model.md
+      - Exporter:
+        - Exporter: api_reference/inference/exporter/exporter.md
+        - SegmentationExporter: api_reference/inference/exporter/segmentation_exporter.md
+      - Model:
+        - Model: api_reference/inference/model/model.md
+        - SegmentationModel: api_reference/inference/model/segmentation_model.md
+        - ONNXSegmentationModel: api_reference/inference/model/onnx_segmentation_model.md
     - aviary.pipeline:
       - PostprocessingPipeline: api_reference/pipeline/postprocessing_pipeline.md
       - SegmentationPipeline: api_reference/pipeline/segmentation_pipeline.md
