--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Check links
         uses: lycheeverse/lychee-action@v1
+        with:
+          args: --exclude-path docs/overrides/partials/logo.html -- .
 
       - name: Create issue
         if: env.lychee_exit_code != 0
