--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,14 @@ multiline-quotes = "single"
 "dev/scripts/*" = [
     "T201",
 ]
+"docs/*.ipynb" = [
+    "D103",
+    "T201",
+]
+"docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb" = [
+    "ARG005",
+    "E731",
+]
 "**/tests/*" = [
     "D103",
     "PLR2004",
