--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,10 @@ multiline-quotes = "single"
     "D103",
     "T201",
 ]
+"docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb" = [
+    "ARG005",
+    "E731",
+]
 "docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb" = [
     "ARG005",
     "E731",
