--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -3,7 +3,7 @@ name: Check links
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * 1'
+    - cron: '0 0 * * *'
 
 permissions:
   contents: read
