exclude overload decorated functions from coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ exclude_also = [
     "if TYPE_CHECKING:",
     "class .*\\bProtocol\\):",
     "@(abc\\.)?abstractmethod",
+    "@overload",
 ]
 
 [tool.pytest.ini_options]
