--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,6 +35,7 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
           pip install -r dev/requirements/ci_requirements.txt
+          pip install -r dev/requirements/check_links_requirements.txt
 
       - name: Test with pytest
         run: |
@@ -54,3 +55,17 @@ jobs:
       - name: Check dependencies with pip-audit
         run: |
           pip-audit
+
+      - name: Convert notebooks to markdown
+        run: |
+          find . -name "*.ipynb" -exec jupyter nbconvert --to markdown {} \;
+
+      - name: Check links
+        uses: lycheeverse/lychee-action@v1
+        with:
+          args: |
+            --exclude .*\/maps\/.*\.html$
+            --exclude-path docs/overrides/partials/logo.html
+            --user-agent curl
+            .
+          fail: true
