--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -31,7 +31,7 @@ jobs:
         run: |
           find . -name "*.ipynb" -exec jupyter nbconvert --to markdown {} \;
 
-      - name: Check links
+      - name: Check links with lychee
         uses: lycheeverse/lychee-action@v1
         with:
           args: |
