--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -111,6 +111,7 @@ theme:
         name: Switch to light mode
 
 plugins:
+  - privacy
   - search
   - mkdocstrings:
       handlers:
@@ -143,6 +144,25 @@ markdown_extensions:
           case: lower
 
 extra:
+  consent:
+    title: Privacy consent
+    description: |
+      We use third-party services (but <strong>no cookies</strong>)
+      to improve the documentation and the user experience.<br />
+      You can change the privacy settings at any time.
+      Have a look at our privacy policy for further information.
+    cookies:
+      github: |
+        <a href="https://www.github.com" target="_blank">GitHub</a>
+        for repository information
+      maps: |
+        <a href="https://www.leafletjs.com" target="_blank">Leaflet</a>
+        and <a href="https://www.openstreetmap.org" target="_blank">OpenStreetMap</a>
+        for interactive maps
+    actions:
+      - accept
+      - reject
+      - manage
   generator: false
   social:
     - icon: simple/github
@@ -153,6 +173,9 @@ extra:
 extra_css:
   - stylesheets/color.css
   - stylesheets/extra.css
+
+extra_javascript:
+  - javascripts/consent.js
 
 copyright:
   © 2024 geospaitial lab
