--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -1,7 +1,7 @@
 site_name: aviary
 site_url: https://geospaitial-lab.github.io/aviary
 repo_name: geospaitial-lab/aviary
-repo_url: https://github.com/geospaitial-lab/aviary
+repo_url: https://www.github.com/geospaitial-lab/aviary
 docs_dir: ../docs
 exclude_docs: README.md
 
@@ -169,9 +169,9 @@ extra:
   generator: false
   social:
     - icon: simple/github
-      link: https://github.com/geospaitial-lab
+      link: https://www.github.com/geospaitial-lab
     - icon: simple/huggingface
-      link: https://huggingface.co/geospaitial-lab
+      link: https://www.huggingface.co/geospaitial-lab
 
 extra_css:
   - stylesheets/color.css
