--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -46,7 +46,7 @@ jobs:
             --exclude-path docs/overrides/partials/logo.html
             --user-agent curl
             .
-          fail: |
+          fail: |-
             ${{ github.event_name == 'pull_request' || github.event_name == 'push' }}
 
       - name: Create issue
