--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -158,7 +158,6 @@ extra:
         <a href="https://www.github.com" target="_blank">GitHub</a>
         for repository information
       maps: |
-        <a href="https://www.leafletjs.com" target="_blank">Leaflet</a>,
         <a href="https://www.openstreetmap.org" target="_blank">OpenStreetMap</a>
         and <a href="https://www.bezreg-koeln.nrw.de/geobasis-nrw" target="_blank">Geobasis NRW</a>
         for interactive maps
@@ -179,6 +178,28 @@ extra_css:
 
 extra_javascript:
   - javascripts/consent.js
+
+extra_templates:
+  - how_to_guides/api/maps/bounding_box.html
+  - how_to_guides/api/maps/bounding_box_buffer_1.html
+  - how_to_guides/api/maps/bounding_box_buffer_2.html
+  - how_to_guides/api/maps/bounding_box_from_gdf.html
+  - how_to_guides/api/maps/bounding_box_from_gdf_districts.html
+  - how_to_guides/api/maps/bounding_box_quantize.html
+  - how_to_guides/api/maps/bounding_box_setter.html
+  - how_to_guides/api/maps/process_area.html
+  - how_to_guides/api/maps/process_area_add.html
+  - how_to_guides/api/maps/process_area_and.html
+  - how_to_guides/api/maps/process_area_append.html
+  - how_to_guides/api/maps/process_area_filter_difference.html
+  - how_to_guides/api/maps/process_area_filter_intersection.html
+  - how_to_guides/api/maps/process_area_from_bounding_box.html
+  - how_to_guides/api/maps/process_area_from_bounding_box_quantize.html
+  - how_to_guides/api/maps/process_area_from_bounding_box_tile_size.html
+  - how_to_guides/api/maps/process_area_from_gdf.html
+  - how_to_guides/api/maps/process_area_from_gdf_districts.html
+  - how_to_guides/api/maps/process_area_setter.html
+  - how_to_guides/api/maps/process_area_sub.html
 
 copyright:
   © 2024 geospaitial lab
