--- a/.github/workflows/check_dependencies.yaml
+++ b/.github/workflows/check_dependencies.yaml
@@ -4,6 +4,12 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 jobs:
   check_dependencies:
@@ -38,6 +44,9 @@ jobs:
           pip-audit
 
   check_release_dependencies:
+    if: |
+      github.event_name != 'pull_request' &&
+      github.event_name != 'push'
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -62,7 +71,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install geospaitial-lab-aviary
-          pip install -r dev/requirements/ci_requirements.txt
+          pip install -r dev/requirements/check_dependencies_requirements.txt
 
       - name: Check dependencies with pip-audit
         run: |
